extends Control

@onready var bg = $Background
#@onready var noise = load("res://mainMenuNoise.tres")

func _ready() -> void:
	pass

func startButton() -> void:
	pass # Replace with function body.

func settingsButton() -> void:
	pass # Replace with function body.

func quitButton() -> void:
	pass # Replace with function body.
